# rustStudyGroup

./: README.md  list.txt  temp.md
actix-web/: Cargo.toml  README.md
actix-web/src/: main.rs
codesignal/: Cargo.toml  POLYMORPHISM_COMPARISON.md
codesignal/bank/src/: account.rs  account_factory.rs  logger.rs  main.rs
codesignal/behavioral/alarm/: Cargo.toml
codesignal/behavioral/alarm/src/: climate_control.rs  main.rs  security_control.rs
codesignal/behavioral/attack/: Cargo.toml
codesignal/behavioral/attack/src/: attack_strategy.rs  battle_command.rs  game_character.rs  main.rs  mod battle_command;.rs
codesignal/behavioral/blog_notif/: Cargo.toml
codesignal/behavioral/blog_notif/src/: blog_publisher.rs  concrete_subscriber.rs  main.rs
codesignal/behavioral/book_store/: Cargo.toml
codesignal/behavioral/book_store/src/: bookstore.rs  main.rs  subscriber.rs
codesignal/behavioral/celebrity/: Cargo.toml
codesignal/behavioral/celebrity/src/: celebrity.rs  follower.rs  main.rs
codesignal/behavioral/chat/src/: chat_command.rs  chat_room.rs  main.rs  user.rs
codesignal/behavioral/climate_control/: Cargo.toml
codesignal/behavioral/climate_control/src/: climate_control.rs  climate_controller.rs  main.rs
codesignal/behavioral/discount/: Cargo.toml
codesignal/behavioral/discount/src/: command.rs  customer.rs  discount_strategy.rs  main.rs  order.rs
codesignal/behavioral/fan/: Cargo.toml
codesignal/behavioral/fan/src/: command.rs  fan.rs  fan_off_command.rs  fan_on_command.rs  main.rs  remote_control.rs
codesignal/behavioral/fan_control/: Cargo.toml
codesignal/behavioral/fan_control/src/: command.rs  fan.rs  fan_high_command.rs  fan_low_command.rs  fan_medium_command.rs  fan_off_command.rs  main.rs  remote_control.rs
codesignal/behavioral/hero/: Cargo.toml
codesignal/behavioral/hero/src/: hero_strategy.rs  main.rs
codesignal/behavioral/influencers/: Cargo.toml
codesignal/behavioral/influencers/src/: influencer.rs  main.rs
codesignal/behavioral/light/src/: command.rs  light.rs  light_off_command.rs  light_on_command.rs  main.rs
codesignal/behavioral/payment_strategy/: Cargo.toml
codesignal/behavioral/payment_strategy/src/: main.rs
codesignal/behavioral/play_music/: Cargo.toml
codesignal/behavioral/play_music/src/: main.rs  music_player.rs  play_music_command.rs  remote_control.rs  stop_music_command.rs
codesignal/behavioral/podcast/: Cargo.toml
codesignal/behavioral/podcast/src/: listener.rs  main.rs  podcast_channel.rs
codesignal/behavioral/psystem_strategy/: Cargo.toml
codesignal/behavioral/psystem_strategy/src/: main.rs  payment_strategy.rs
codesignal/behavioral/remote_control/: Cargo.toml
codesignal/behavioral/remote_control/src/: command.rs  fan.rs  fan_off_command.rs  fan_on_command.rs  main.rs  remote_control.rs
codesignal/behavioral/shome_command/: Cargo.toml
codesignal/behavioral/shome_command/src/: command.rs  device.rs  main.rs  remote_control.rs  turn_off_command.rs  turn_on_command.rs
codesignal/behavioral/shome_decorator/: Cargo.toml
codesignal/behavioral/shome_decorator/src/: colored_light.rs  device.rs  main.rs
codesignal/behavioral/shome_strategy/: Cargo.toml
codesignal/behavioral/shome_strategy/src/: brightness_strategy.rs  device.rs  device_factory.rs  main.rs
codesignal/behavioral/shopping_strategy/: Cargo.toml
codesignal/behavioral/shopping_strategy/src/: main.rs  payment.rs
codesignal/behavioral/smart_home/src/: device_factory.rs  main.rs  security_device.rs  (+1 more)
codesignal/behavioral/text_strategy/: Cargo.toml
codesignal/behavioral/weather_notif/: Cargo.toml
codesignal/builder/: Cargo.toml
codesignal/builder/src/: house_builder.rs  house_main.rs
codesignal/builder2/: Cargo.toml
codesignal/builder2/src/: house.rs  house_builder.rs  main.rs
codesignal/builder3/: Cargo.toml
codesignal/builder3/src/: main.rs  robot.rs  robot_builder.rs
codesignal/creational/: Cargo.toml
codesignal/creational/src/: configmgr.rs  document_creator.rs  factory.rs  instr.rs  instrument.rs  instrument_creator.rs  logger.rs  logger2.rs  logger3.rs  music.rs  notification.rs  notification_creator.rs  notification_main.rs  sConfig.rs  singleton.rs  vehicle.rs  vehicle_creator.rs  vehicle_main.rs
codesignal/customer/src/: customer.rs  customer_builder.rs  main.rs
codesignal/decorator/burger/: Cargo.toml
codesignal/decorator/cinnamon/: Cargo.toml
codesignal/decorator/superhero/: Cargo.toml
codesignal/final/strategy_file/: Cargo.toml
codesignal/house_builder/: Cargo.toml
codesignal/house_builder/src/: house.rs  house_builder.rs  main.rs
codesignal/loan/: Cargo.toml
codesignal/loan/src/: loan.rs  loan_factory.rs  logger.rs  main.rs
codesignal/own_brw/: Cargo.toml
codesignal/own_brw/src/: int_mgmt.rs  main.rs  own.rs
codesignal/solid/: Cargo.toml
codesignal/solid/src/: Animals.rs  Course.rs  FeedAnimalsEnum.rs  NotificationService.rs  OpenClosed.rs  dep_inv.rs  dependencies.rs  if_segregation.rs  palindrome.rs  readability.rs  single_resp.rs
codesignal/src/: Error-prop.rs  Errors.rs  FeedAnimals.rs  FruitStore.rs  dry-extractfunc.rs  job.rs  kiss1.rs
codesignal/structs/: Cargo.toml
codesignal/structs/src/: animal.rs  book.rs  car.rs  color.rs  displayable.rs  displayable_std.rs  gameevent.rs  gen_coordinate.rs  gen_integerpoint.rs  gen_rectangle.rs  message.rs  point.rs  print_area.rs  rectangle.rs  structs.rs
codesignal/structural/art_gallery/: Cargo.toml
codesignal/structural/british-usa_adapter/: Cargo.toml
codesignal/structural/coffee/: Cargo.toml
codesignal/structural/food_ordering/: Cargo.toml
codesignal/structural/manage_tasks/: Cargo.toml
codesignal/structural/musical_band/: Cargo.toml
codesignal/structural/sound_system/: Cargo.toml
codesignal/structural/thermometer/: Cargo.toml
codesignal/structural/zoo_mgmt/: Cargo.toml
codesignal/to-the_moon/: Cargo.toml
deep-study/pattern-match/crab_script_parser/: Cargo.toml
tonic-demo1/: Cargo.toml  README.md  build.rs
tonic-demo1/proto/: calculator.proto
tonic-demo1/src/: client.rs  main.rs
(+324 files in other folders)
