[package]
name = "actix-web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-web = { version = "4.11.0", features = ["macros"] }
actix-rt = "2.10.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
