[package]
name = "codesignal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ns"
path = "src/NotificationService.rs"

[[bin]]
name = "fs"
path = "src/FruitStore.rs"

[[bin]]
name = "nml"
path = "src/Animals.rs"

[[bin]]
name = "fa"
path = "src/FeedAnimals.rs"

[[bin]]
name = "fae"
path = "src/FeedAnimalsEnum.rs"

[[bin]]
name = "kiss1"
path = "src/kiss1.rs"

[[bin]]
name = "readability"
path = "src/readability.rs"

[[bin]]
name = "palindrome"
path = "src/palindrome.rs"

[[bin]]
name = "dependencies"
path = "src/dependencies.rs"

[[bin]]
name = "job"
path = "src/job.rs"

[[bin]]
name = "err1"
path = "src/Errors.rs"

[[bin]]
name = "err2"
path = "src/Error-prop.rs"

[[bin]]
name = "dry1"
path = "src/dry-extractfunc.rs"

[dependencies]
