[package]
name = "creational"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "singleton"
path = "src/singleton.rs"

[[bin]]
name = "sconfig"
path = "src/sConfig.rs"

[[bin]]
name = "logger"
path = "src/logger.rs"

[[bin]]
name = "docfactory"
path = "src/factory.rs"

[[bin]]
name = "instr"
path = "src/instr.rs"

[[bin]]
name = "vehicle_main"
path = "src/vehicle_main.rs"

[[bin]]
name = "notification_main"
path = "src/notification_main.rs"

[dependencies]
