[package]
name = "structs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "car"
path = "src/car.rs"

[[bin]]
name = "point"
path = "src/point.rs"

[[bin]]
name = "rectangle"
path = "src/rectangle.rs"

[[bin]]
name = "book"
path = "src/book.rs"

[[bin]]
name = "ge"
path = "src/gameevent.rs"

[[bin]]
name = "msg"
path = "src/messge.rs"

[[bin]]
name = "grect"
path = "src/gen_rectangle.rs"

[[bin]]
name = "gint"
path = "src/gen_integerpoint.rs"

[[bin]]
name = "gcoord"
path = "src/gen_coordinate.rs"

[dependencies]
