[package]
name = "pachadata-api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
anyhow = "1.0.98"
strum = "0.27.2"
strum_macros = "0.27.2"
tracing = "0.1.41"
